--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   receiver:
     build:
@@ -15,11 +20,15 @@ services:
       - REDIS_URL=redis://redis:6379
       - DERIBIT_CLIENT_ID=${DERIBIT_CLIENT_ID}
       - DERIBIT_CLIENT_SECRET=${DERIBIT_CLIENT_SECRET}
+      - TZ=UTC
     volumes:
       - ./data:/app/data
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
     restart: unless-stopped
+    ports:
+      - "8000:8000"  # For health checks
 
 volumes:
   redis-data:
