--- a/trading/receiver/Dockerfile
+++ b/trading/receiver/Dockerfile
@@ -25,21 +25,21 @@ RUN uv pip install \
 FROM base AS runtime
 
 # Create non-root user
-RUN groupadd -r appuser && useradd -r -g appuser appuser
+RUN groupadd -r appuser && \
+    useradd -r -g appuser appuser && \
+    mkdir -p /app/data && \
+    chown appuser:appuser /app/data && \
+    chmod 750 /app/data
 
 # Copy virtual environment
-COPY --from=builder ${UV_VENV} ${UV_VENV}
+COPY --from=builder --chown=appuser:appuser ${UV_VENV} ${UV_VENV}
 
 # Copy only necessary application files
 WORKDIR /app
-
-COPY trading/shared/src/shared /app/shared
-COPY trading/receiver/src/receiver /app/receiver
-COPY trading/scripts/src/scripts /app/scripts
-COPY config config
-
-# Set up data directory with proper permissions
-RUN mkdir -p /app/data && chown appuser:appuser /app/data && chmod 750 /app/data
+COPY --chown=appuser:appuser trading/shared/src/shared ./shared/
+COPY --chown=appuser:appuser trading/receiver/src/receiver ./receiver/
+COPY --chown=appuser:appuser trading/scripts/src/scripts ./scripts/
+COPY --chown=appuser:appuser config ./config/
 
 # Environment variables
 ENV DB_BASE_PATH=/app/data \
@@ -52,7 +52,7 @@ USER appuser
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s \
-  CMD python -c "import socket; socket.create_connection(('localhost', 8000), 3)" || exit 1
+  CMD python -c "import socket; s=socket.socket(); s.connect(('localhost',8000))" || exit 1
 
 # Run receiver service
 CMD ["python", "/app/receiver/deribit/main.py"]
