--- a/trading/receiver/Dockerfile
+++ b/trading/receiver/Dockerfile
@@ -1,58 +1,48 @@
-# Stage 1: Base with UV - common for all stages
+# Stage 1: UV base
 FROM python:3.11-slim AS base
 ENV UV_VENV=/opt/venv
-RUN python -m pip install --no-cache-dir uv \
-    && python -m uv venv ${UV_VENV}
-ENV PATH="${UV_VENV}/bin:$PATH"
+RUN python -m pip install --no-cache-dir uv && \
+    python -m uv venv $UV_VENV
+ENV PATH="$UV_VENV/bin:$PATH"
 
-# Stage 2: Builder for dependencies
+# Stage 2: Dependency installation
 FROM base AS builder
 WORKDIR /build
 
-# Copy only dependency files for cache optimization
-COPY trading/shared/pyproject.toml trading/shared/
-COPY trading/receiver/pyproject.toml trading/receiver/
+# Copy dependency specs
+COPY src/shared/pyproject.toml ./src/shared/
+COPY src/receiver/pyproject.toml ./src/receiver/
 
-# Install dependencies with UV
+# Install with UV
 RUN uv pip install \
     --no-cache \
     --strict \
-    --resolution=lowest-direct \
-    -e ./trading/shared \
-    -e ./trading/receiver
+    -e ./src/shared \
+    -e ./src/receiver
 
-# Stage 3: Runtime image
+# Stage 3: Optimized runtime
 FROM base AS runtime
 
-# Create non-root user
+# Security hardening
 RUN groupadd -r appuser --gid=1000 && \
     useradd -r -g appuser --uid=1000 appuser && \
     mkdir -p /app/data && \
     chown -R 1000:1000 /app && \
     chmod -R 750 /app
 
-# Copy virtual environment
-COPY --from=builder --chown=1000:1000 ${UV_VENV} ${UV_VENV}
-
-# Copy application files
+# Copy artifacts
+COPY --from=builder $UV_VENV $UV_VENV
+COPY --chown=1000:1000 . /app
 WORKDIR /app
-COPY --chown=1000:1000 trading/shared/src/shared ./trading/shared/src/shared
-COPY --chown=1000:1000 trading/receiver/src/receiver ./trading/receiver/src/receiver
-COPY --chown=1000:1000 trading/scripts/src/scripts ./trading/scripts/src/scripts
-COPY --chown=1000:1000 config ./config
 
-# Environment variables
+# Final settings
+USER 1000
 ENV DB_BASE_PATH=/app/data \
-    PYTHONPATH=/app/trading/shared/src:/app/trading/receiver/src:/app/trading/scripts/src:$PYTHONPATH \
+    PYTHONPATH=/app/src:$PYTHONPATH \
     PYTHONUNBUFFERED=1 \
     PYTHONPYCACHEPREFIX=/tmp/.pycache
 
-# Switch to non-root user
-USER 1000
-
-# Health check
 HEALTHCHECK --interval=30s --timeout=3s \
-  CMD python -c "import socket; s=socket.socket(); s.connect(('localhost',8000))" || exit 1
+  CMD curl -f http://localhost:8000/health || exit 1
 
-# Run receiver service
-CMD ["python", "trading/receiver/src/receiver/deribit/main.py"]
+CMD ["python", "src/receiver/deribit/main.py"]
