--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   redis:
     image: redis:7-alpine
@@ -15,7 +14,7 @@ services:
   receiver:
     build:
       context: .
-      dockerfile: trading/receiver/Dockerfile
+      dockerfile: src/receiver/Dockerfile  # Updated path
     environment:
       - REDIS_URL=redis://redis:6379
       - DERIBIT_CLIENT_ID=${DERIBIT_CLIENT_ID}
@@ -27,8 +26,9 @@ services:
       redis:
         condition: service_healthy
     restart: unless-stopped
-    ports:
-      - "8000:8000"  # For health checks
+    # Remove port mapping since no web server exists
+    # ports:
+    #   - "8000:8000"
 
 volumes:
   redis-data:
