--- a/src/shared/pyproject.toml
+++ b/src/shared/pyproject.toml
@@ -10,5 +10,5 @@ dependencies = [
     "python-dotenv>=1.0.0,<2.0.0",
     "loguru>=0.7.0,<1.0.0",
     "dataclassy",
-    "tomli",
+    "tomli==2.0.2",
 ]
