--- a/src/shared/pyproject.toml
+++ b/src/shared/pyproject.toml
@@ -3,7 +3,7 @@
 name = "shared"
 version = "1.0.0"
 dependencies = [
-    "orjson>=3.9.10,<4.0.0",
+    "orjson>=3.10.18",
     "redis>=5.0.0,<6.0.0",
     "aiohttp>=3.12.7",
     "aiosqlite>=0.20.0,<1.0.0",
