--- a/src/receiver/Dockerfile
+++ b/src/receiver/Dockerfile
@@ -38,6 +38,7 @@ COPY --from=builder --chown=1000:1000 ${UV_VENV} ${UV_VENV}
 WORKDIR /app
 COPY --chown=1000:1000 ./src ./src
 COPY --chown=1000:1000 ./config ./config
+COPY --chown=1000:1000 ./core ./core
 
 # Environment variables
 ENV DB_BASE_PATH=/app/data \
