--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,8 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# secrets
-client_id.txt
-client_secret.txt
+# Secrets
+secrets/*
+!secrets/.gitkeep
+config/security.toml
+.env
