--- a/src/executor/pyproject.toml
+++ b/src/executor/pyproject.toml
@@ -1,10 +1,8 @@
 
 [project]
-name = "receiver"
+name = "executor"
 version = "1.0.0"
 dependencies = [
-    "websockets>=12.0",
-    "oci>=2.125",
     "uvloop>=0.21.0"
 ]
 
