--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,25 @@ services:
     # ports:
     #   - "8000:8000"
 
+  executor:
+    build:
+      context: .
+      dockerfile: src/executor/Dockerfile
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - TZ=UTC
+    volumes:
+      - ./data:/app/data
+    depends_on:
+      redis:
+        condition: service_healthy
+    secrets:
+      - source: deribit_client_id
+        target: deribit_client_id
+      - source: deribit_client_secret
+        target: deribit_client_secret
+    restart: unless-stopped
+
 volumes:
   redis-data:  
 secrets:
