--- a/src/services/receiver/Dockerfile
+++ b/src/services/receiver/Dockerfile
@@ -1,3 +1,5 @@
+# src\services\receiver\Dockerfile
+
 # Stage 1: Base with UV - common for all stages
 FROM python:3.13-slim AS base
 ENV UV_VENV=/opt/venv
