--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,7 +76,7 @@ services:
     secrets:
       - db_password
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U trading_app"]
+      test: ["CMD-SHELL", "pg_isready -U trading_app -d trading"]
       interval: 10s
       timeout: 5s
       retries: 5
