add redis stream

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       interval: 10s
       timeout: 3s
       retries: 3
+    command: 
+      - --maxmemory 1gb
+      - --maxmemory-policy allkeys-lru
+      - --save ""
 
   receiver:
     build:
