--- a/src/services/distributor/Dockerfile
+++ b/src/services/distributor/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /build
 
 # Copy dependency files using actual project structure
 COPY src/shared/pyproject.toml src/shared/
-RUN uv pip install --no-cache -e ./src/shared -e ./src/services/distributor
+COPY src/services/distributor/pyproject.toml src/services/distributor/
 
 
 # Install dependencies with UV
