--- a/src/services/distributor/pyproject.toml
+++ b/src/services/distributor/pyproject.toml
@@ -4,7 +4,9 @@
 name = "distributor"
 version = "1.0.0"
 dependencies = [
-    "uvloop>=0.21.0"
+    "uvloop>=0.21.0",
+    "shared @ file:///app/src/shared"
+
 ]
 
 
