--- a/src/services/receiver/pyproject.toml
+++ b/src/services/receiver/pyproject.toml
@@ -5,7 +5,8 @@ name = "receiver"
 version = "1.0.0"
 dependencies = [
     "websockets>=12.0",
-    "uvloop>=0.21.0"
+    "uvloop>=0.21.0",
+    "shared @ file:///app/src/shared" 
 ]
 
 
