--- a/src/services/receiver/Dockerfile
+++ b/src/services/receiver/Dockerfile
@@ -12,8 +12,9 @@ FROM base AS builder
 WORKDIR /build
 
 # Copy dependency files using actual project structure
-COPY src/shared/pyproject.toml src/shared/
-COPY src/services/receiver/pyproject.toml src/services/receiver/
+COPY src/shared/ src/shared/ 
+COPY src/services/receiver/ src/services/receiver/
+
 
 # Install dependencies with UV
 RUN uv pip install \
