--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,10 +51,28 @@ services:
       dockerfile: src/services/distributor/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379
+      - TZ=UTC
+      - POSTGRES_HOST=postgres  # Add PostgreSQL connection info
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=trading
+    volumes:
+      - ./data:/app/data
     depends_on:
       redis:
         condition: service_healthy
+      postgres:
+        condition: service_healthy
+    secrets:
+      - source: deribit_client_id
+        target: deribit_client_id
+      - source: deribit_client_secret
+        target: deribit_client_secret
+      - source: db_password  # Add DB password secret
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "-h", "redis", "ping"]
+      interval: 30s
+
   postgres:
     image: postgres:17
     environment:
