--- a/src/shared/pyproject.toml
+++ b/src/shared/pyproject.toml
@@ -7,11 +7,11 @@ dependencies = [
     "redis>=5.0.0,<6.0.0",
     "aiohttp==3.12.7",
     "aiosqlite>=0.20.0,<1.0.0",
+    "asyncpg==0.30.0",
     "python-dotenv>=1.0.0,<2.0.0",
     "loguru>=0.7.0,<1.0.0",
     "dataclassy",
     "tomli==2.0.0",
-    "asyncpg==0.30.0"
 ]
 
 [tool.pytest.optional-dependencies]
