--- a/src/services/distributor/Dockerfile
+++ b/src/services/distributor/Dockerfile
@@ -1,3 +1,5 @@
+# src\services\distributor\Dockerfile
+
 # Stage 1: Base with UV
 FROM python:3.13-slim AS base
 ENV UV_VENV=/opt/venv
@@ -9,10 +11,19 @@ ENV PATH="${UV_VENV}/bin:$PATH"
 FROM base AS builder
 WORKDIR /build
 
-# Corrected COPY commands
+# Install RedisJSON dependencies
+RUN apt-get update && \
+    apt-get install -y curl build-essential && \
+    curl -sL https://github.com/RedisJSON/RedisJSON/archive/refs/tags/v2.8.4.tar.gz | tar xz && \
+    cd RedisJSON-2.8.4 && \
+    make && \
+    cp bin/linux-x64-release/rejson.so /usr/lib/redis/modules/
+
+# Copy application files
 COPY src/shared/ src/shared/
 COPY src/services/distributor/ src/services/distributor/
 
+# Install Python dependencies
 RUN uv pip install \
     --no-cache \
     --strict \
@@ -22,19 +33,27 @@ RUN uv pip install \
 
 # Stage 3: Runtime
 FROM base AS runtime
+
+# Copy RedisJSON module
+COPY --from=builder /usr/lib/redis/modules/rejson.so /usr/lib/redis/modules/
+
+# Create non-root user
 RUN groupadd -r appuser --gid=1000 && \
     useradd -r -g appuser --uid=1000 appuser && \
     mkdir -p /app/data && \
     chown -R 1000:1000 /app && \
     chmod -R 750 /app
 
+# Copy virtual environment
 COPY --from=builder --chown=1000:1000 ${UV_VENV} ${UV_VENV}
 
+# Copy application files
 WORKDIR /app
 COPY --chown=1000:1000 ./src ./src
 COPY --chown=1000:1000 ./config ./config
 COPY --chown=1000:1000 ./core ./core
 
+# Environment variables
 ENV DB_BASE_PATH=/app/data \
     PYTHONPATH=/app \
     PYTHONUNBUFFERED=1 \
