--- a/src/services/receiver/Dockerfile
+++ b/src/services/receiver/Dockerfile
@@ -9,19 +9,33 @@ ENV PATH="${UV_VENV}/bin:$PATH"
 FROM base AS builder
 WORKDIR /build
 
-# Corrected COPY commands
+
+# Install RedisJSON dependencies
+RUN apt-get update && \
+    apt-get install -y curl build-essential && \
+    curl -sL https://github.com/RedisJSON/RedisJSON/archive/refs/tags/v2.8.4.tar.gz | tar xz && \
+    cd RedisJSON-2.8.4 && \
+    make && \
+    cp bin/linux-x64-release/rejson.so /usr/lib/redis/modules/
+
+# Copy application files
 COPY src/shared/ src/shared/
 COPY src/services/receiver/ src/services/receiver/
 
+# Install Python dependencies
 RUN uv pip install \
     --no-cache \
     --strict \
     --resolution=lowest-direct \
     ./src/shared \
     ./src/services/receiver
-
+    
 # Stage 3: Runtime
 FROM base AS runtime
+
+# Copy RedisJSON module
+COPY --from=builder /usr/lib/redis/modules/rejson.so /usr/lib/redis/modules/
+
 RUN groupadd -r appuser --gid=1000 && \
     useradd -r -g appuser --uid=1000 appuser && \
     mkdir -p /app/data && \
