--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@
 
 services:
   redis:
-    image: redislabs/redisjson:2.8.4
+    image: redis/redis-stack:7.2.0-v7
     ports:
       - "6379:6379"
+      - "8001:8001" # RedisInsight UI
     volumes:
       - redis-data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "-h", "redis", "ping"]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 5s
       retries: 3
