--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,17 @@
 
 services:
   redis:
-    image: redis/redis-stack:7.2.0-v7
+    image: redis:7-alpine
     ports:
       - "6379:6379"
-      - "8001:8001" # RedisInsight UI
     volumes:
       - redis-data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-h", "redis", "ping"]
       interval: 30s
       timeout: 5s
       retries: 3
     command: 
-      - redis-server
       - --maxmemory 2gb
       - --maxmemory-policy volatile-lfu # Better for streams
       - --save ""  # Disable disk persistence
@@ -25,36 +23,53 @@ services:
       dockerfile: src/services/receiver/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379
+      - TZ=UTC
+      - POSTGRES_HOST=postgres  # Add PostgreSQL connection info
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=trading
     volumes:
       - ./data:/app/data
     depends_on:
       redis:
+        condition: service_healthy
+      postgres:
         condition: service_healthy
     secrets:
       - source: deribit_client_id
         target: deribit_client_id
       - source: deribit_client_secret
         target: deribit_client_secret
+      - source: db_password  # Add DB password secret
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "-h", "redis", "ping"]
       interval: 30s
 
-  distributor:
+  executor:
     build:
       context: .
-      dockerfile: src/services/distributor/Dockerfile
+      dockerfile: src/services/executor/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379
       - TZ=UTC
-      - POSTGRES_HOST=postgres
+      - POSTGRES_HOST=postgres  # Add PostgreSQL connection info
       - POSTGRES_PORT=5432
       - POSTGRES_DB=trading
+    volumes:
+      - ./data:/app/data
     depends_on:
       redis:
         condition: service_healthy
+      postgres:
+        condition: service_healthy
+    secrets:
+      - source: deribit_client_id
+        target: deribit_client_id
+      - source: deribit_client_secret
+        target: deribit_client_secret
+      - source: db_password  # Add DB password secret
     restart: unless-stopped
-    
+
   postgres:
     image: postgres:17
     environment:
@@ -66,8 +81,7 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     secrets:
-    - source: db_password
-      target: db_password
+      - db_password
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U trading_app -d trading"]
       interval: 10s
